--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -174,7 +174,7 @@ libsurfit_la_SOURCES += src/surfit/matrD1.cpp
 libsurfit_la_SOURCES += src/surfit/matrD1_aniso.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/matrD1_rect.cpp                                               
 libsurfit_la_SOURCES += src/surfit/matrD2.cpp                                                    
-libsurfit_la_SOURCES += src/surfit/matrD2_aniso.cpp
+#libsurfit_la_SOURCES += src/surfit/matrD2_aniso.cpp
 libsurfit_la_SOURCES += src/surfit/matrD2_rect.cpp                                               
 libsurfit_la_SOURCES += src/surfit/matr_diag.cpp                                                 
 libsurfit_la_SOURCES += src/surfit/matr_eye.cpp                                                  
@@ -266,7 +266,7 @@ libsurfit_la_HEADERS += src/surfit/matr.h
 libsurfit_la_HEADERS += src/surfit/matrD1.h            
 libsurfit_la_HEADERS += src/surfit/matrD1_aniso.h            
 libsurfit_la_HEADERS += src/surfit/matrD2.h            
-libsurfit_la_HEADERS += src/surfit/matrD2_aniso.h
+#libsurfit_la_HEADERS += src/surfit/matrD2_aniso.h
 libsurfit_la_HEADERS += src/surfit/matr_diag.h         
 libsurfit_la_HEADERS += src/surfit/matr_eye.h          
 libsurfit_la_HEADERS += src/surfit/matr_onesrow.h      
