--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -4,7 +4,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = "surfit manual"
-PROJECT_NUMBER         = 2.0
+PROJECT_NUMBER         = 2.1
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
@@ -104,6 +104,7 @@ INPUT                  = src/install.doc \
 			 src/penalty.doc \
 			 src/freeflow.doc \
 			 src/globe.doc \
+			 src/surfit_io.doc \
 			 src/boosters.doc \
 			 src/compare.doc \
 			 ../src/surfit/cmofs.h \
@@ -126,7 +127,12 @@ INPUT                  = src/install.doc \
 			 ../src/freeflow/flow_points_tcl.h \
 			 ../src/freeflow/flow_surf_tcl.h \
 			 ../src/freeflow/flow_curvs_tcl.h \
-			 ../src/freeflow/f_lcm_simple_tcl.h 
+			 ../src/freeflow/f_lcm_simple_tcl.h \
+			 ../src/surfit_io/area_io_tcl.h \
+			 ../src/surfit_io/cntr_io_tcl.h \
+			 ../src/surfit_io/curv_io_tcl.h \
+			 ../src/surfit_io/pnts_io_tcl.h \
+			 ../src/surfit_io/surf_io_tcl.h 
 FILE_PATTERNS          = *.doc
 RECURSIVE              = YES
 EXCLUDE                = 
